adjustment menu player styles

--- a/src/music-player/components/menu-player/styles.css
+++ b/src/music-player/components/menu-player/styles.css
@@ -1,3 +1,10 @@
+.menu-player-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .menu-player-actions{
     display: flex;
     flex-direction: row;
