--- a/src/music-player/components/card-player/styles.css
+++ b/src/music-player/components/card-player/styles.css
@@ -1,42 +1,61 @@
-.card-content{
+.card-content-md{
     border-radius: 10px;
     background-color: #2A2141;
-    z-index: 1001;
     padding: 28px;
     
-    .card-header{
-        display: flex;
-        flex-direction: row;
-        gap: 29px;
-        margin-bottom: 29px;
-    }
-    
-    .card-title{
-        color: #E1E1E6;
-        font-family: Roboto;
-        font-size: 24px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 100%;
-        margin:0;
-    }
-    
-    .card-subtitle{
-        color: #E1E1E6;
-        font-family: Roboto;
-        font-size: 19px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 100%;
-        opacity: 0.7;
-        margin:0;
-    }
-
-    .card-header-description {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-    }
 }
 
+.card-header-md{
+    display: flex;
+    flex-direction: row;
+    gap: 29px;
+    margin-bottom: 29px;
+}
+
+.card-content-xl{
+    border-radius: 10px;
+    background-color: #2A2141;
+    height: 100%;
+    padding: 39px;
+    
+}
+
+.card-header-xl{
+    display: flex;
+    flex-direction: column;
+    gap: 29px;
+    margin-bottom: 29px;
+}
+/* 
+.card-cover-xl{
+    height: 190px;
+    width: 190px;
+} */
+
+.card-title{
+    color: #E1E1E6;
+    font-family: Roboto;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%;
+    margin:0;
+}
+
+.card-subtitle{
+    color: #E1E1E6;
+    font-family: Roboto;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+    opacity: 0.7;
+    margin:0;
+}
+
+.card-header-description {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
